--- a/EpicSpawners-API/pom.xml
+++ b/EpicSpawners-API/pom.xml
@@ -1,13 +1,10 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<?xml version="1.0" encoding="UTF-8" standalone="no"?><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
         <groupId>com.craftaro</groupId>
         <artifactId>EpicSpawners-Parent</artifactId>
-        <version>8.7.1</version>
+        <version>8.8.0</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>EpicSpawners-API</artifactId>
